--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/rwieberdink/no-reservations/issues"
   },
-  "homepage": "https://github.com/rwieberdink/no-reservations#readme"
+  "homepage": "https://github.com/rwieberdink/no-reservations#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "path": "^0.12.7"
+  }
 }
